Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,23 +1,20 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-BOT_TOKEN = ""
+OWNER_ID = "1285768957"
+TELEGRAM_API = "8233223"
+TELEGRAM_HASH = "dacf95e444cf26fb3d7e9b997e3ee456"
+BOT_TOKEN = "6434194475:AAF_ShhO2diPiuf__Jdb1UsBRC5m4ilkBWc"
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/sktarsk/Z-Mirror"
+UPSTREAM_BRANCH = "main"
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://skmirrorbot:skmirrorbot@cluster0.dz8sz.mongodb.net/?retryWrites=true&w=majority"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
-CMD_SUFFIX = "z"  
-AUTHORIZED_CHATS = ""   
-SUDO_USERS = ""  
+CMD_SUFFIX = "1"  
+AUTHORIZED_CHATS = "-1001423901315"   
+SUDO_USERS = "1285768957"  
 STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
@@ -53,7 +50,7 @@ EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 LEECH_FILENAME_PREFIX = "z"
 LEECH_REMOVE_UNWANTED = ""
-DUMP_CHAT_ID = ""
+DUMP_CHAT_ID = "-1001782322640"
 USER_DUMP = ""
 
 # qBittorrent/Aria2c
@@ -88,8 +85,8 @@ CLONE_LIMIT = ""
 RCLONE_LIMIT = ""
 
 #Group Features
-FSUB_IDS = ""
-USER_MAX_TASKS = ""
+FSUB_IDS = "-1001648018527"
+USER_MAX_TASKS = "2"
 REQUEST_LIMITS = "5"
 ENABLE_MESSAGE_FILTER = "False"
 STOP_DUPLICATE_TASKS = "True"
@@ -97,14 +94,14 @@ DISABLE_DRIVE_LINK = "True"
 TOKEN_TIMEOUT = ""
 
 #Extras
-SET_COMMANDS = "True"
+SET_COMMANDS = "False"
 DISABLE_LEECH = "False"
 DISABLE_BULK = "False"
 DISABLE_MULTI = "False"
 DISABLE_SEED = "False"
 DM_MODE = "all"
 DELETE_LINKS = "True"
-LOG_CHAT_ID = ""
+LOG_CHAT_ID = "-1001619772454"
 
 # Torrent Search
 SEARCH_API_LINK = ""
