--- a/config.env
+++ b/config.env
@@ -1,20 +1,20 @@
 # REQUIRED CONFIG
-OWNER_ID = "1285768957"
-TELEGRAM_API = "8233223"
-TELEGRAM_HASH = "dacf95e444cf26fb3d7e9b997e3ee456"
-BOT_TOKEN = "6434194475:AAF_ShhO2diPiuf__Jdb1UsBRC5m4ilkBWc"
+OWNER_ID = "6169288210"
+TELEGRAM_API = "13384432"
+TELEGRAM_HASH = "ea9db4503ed7088b788e06dfd818e00e"
+BOT_TOKEN = "7330436352:AAHUJUNGytd9bTY1otHe7EVwJlN4km0usXw"
 
 # Update
-UPSTREAM_REPO = "https://github.com/sktarsk/Z-Mirror"
+UPSTREAM_REPO = "https://github.com/Hetlr88/Z-Mir/"
 UPSTREAM_BRANCH = "main"
-
+#
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
-DATABASE_URL = "mongodb+srv://skmirrorbot:skmirrorbot@cluster0.dz8sz.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://mrhex86:mrhex86@cluster0.8pxiirj.mongodb.net/?retryWrites=true&w=majority"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 CMD_SUFFIX = "1"  
-AUTHORIZED_CHATS = "-1001423901315"   
-SUDO_USERS = "1285768957"  
+AUTHORIZED_CHATS = "-1002164397675"   
+SUDO_USERS = "6169288210"  
 STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
@@ -50,7 +50,7 @@ EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 LEECH_FILENAME_PREFIX = ""
 LEECH_REMOVE_UNWANTED = ""
-DUMP_CHAT_ID = "-1001782322640"
+DUMP_CHAT_ID = "-1002175982045"
 USER_DUMP = ""
 
 # qBittorrent/Aria2c
@@ -69,8 +69,8 @@ RSS_DELAY = "600"
 RSS_CHAT_ID = ""
 
 # Mega
-MEGA_EMAIL = ""
-MEGA_PASSWORD = ""
+MEGA_EMAIL = "mrjoaker3@gmail.com"
+MEGA_PASSWORD = "#ssddffgg258"
 
 #Limits
 STORAGE_THRESHOLD = "1"
@@ -85,7 +85,7 @@ CLONE_LIMIT = ""
 RCLONE_LIMIT = ""
 
 #Group Features
-FSUB_IDS = "-1001648018527"
+FSUB_IDS = "-1002198560162"
 USER_MAX_TASKS = "2"
 REQUEST_LIMITS = "5"
 ENABLE_MESSAGE_FILTER = "False"
@@ -101,7 +101,7 @@ DISABLE_MULTI = "False"
 DISABLE_SEED = "False"
 DM_MODE = "all"
 DELETE_LINKS = "True"
-LOG_CHAT_ID = "-1001619772454"
+LOG_CHAT_ID = "-1002175982045"
 
 # Torrent Search
 SEARCH_API_LINK = ""
