--- a/config.env
+++ b/config.env
@@ -1,1 +1,125 @@
+# REQUIRED CONFIG
+OWNER_ID = "6658813663"
+TELEGRAM_API = "29626399"
+TELEGRAM_HASH = "51ef104c84d06173fc048f159ea96087"
+BOT_TOKEN = "7485643829:AAERoCxJqtGIVtbi7-baryQuvoaWqHeuZDw"
 
+# Update
+UPSTREAM_REPO = "https://github.com/Hetlr88/Z-Mir/"
+UPSTREAM_BRANCH = "main"
+#
+# OPTIONAL CONFIG
+USER_SESSION_STRING = ""
+DATABASE_URL = "mongodb+srv://mrhex86:mrhex86@cluster0.8pxiirj.mongodb.net/?retryWrites=true&w=majority"
+DOWNLOAD_DIR = "/usr/src/app/downloads/"
+CMD_SUFFIX = "1"  
+AUTHORIZED_CHATS = "-1002243837012"   
+SUDO_USERS = "6658813663" 
+STATUS_LIMIT = "5"
+DEFAULT_UPLOAD = "gd"
+STATUS_UPDATE_INTERVAL = "10"
+AUTO_DELETE_MESSAGE_DURATION = "60"
+EXTENSION_FILTER = "index html"
+INCOMPLETE_TASK_NOTIFIER = "True"
+YT_DLP_OPTIONS = ""
+
+# Site Api
+FILELION_API = ""
+STREAMWISH_API = ""
+JIODRIVE_ACCESS_TOKEN = ""
+
+# GDrirve Tools
+GDRIVE_ID = ""
+IS_TEAM_DRIVE = "False"
+USE_SERVICE_ACCOUNTS = "False"
+STOP_DUPLICATE = "True"
+INDEX_URL = ""
+
+# Rclone
+RCLONE_PATH = ""
+RCLONE_FLAGS = ""
+RCLONE_SERVE_URL = ""
+RCLONE_SERVE_PORT = ""
+RCLONE_SERVE_USER = ""
+RCLONE_SERVE_PASS = ""
+
+# Leech
+LEECH_SPLIT_SIZE = ""
+AS_DOCUMENT = "False"
+EQUAL_SPLITS = "False"
+MEDIA_GROUP = "False"
+LEECH_FILENAME_PREFIX = ""
+LEECH_REMOVE_UNWANTED = ""
+DUMP_CHAT_ID = "-1002234027674"
+USER_DUMP = "-1002234027674"
+
+# qBittorrent/Aria2c
+TORRENT_TIMEOUT = "300"
+BASE_URL = ""
+BASE_URL_PORT = ""
+WEB_PINCODE = "False"
+
+#Queueing system
+QUEUE_ALL = ""
+QUEUE_DOWNLOAD = ""
+QUEUE_UPLOAD = ""
+
+# RSS
+RSS_DELAY = "600"
+RSS_CHAT_ID = ""
+
+# Mega
+MEGA_EMAIL = "mrjoaker3@gmail.com"
+MEGA_PASSWORD = "#ssddffgg258"
+
+#Limits
+STORAGE_THRESHOLD = "1"
+TORRENT_LIMIT = ""
+DIRECT_LIMIT = ""
+YTDLP_LIMIT = ""
+PLAYLIST_LIMIT = ""
+GDRIVE_LIMIT = ""
+MEGA_LIMIT = "5"
+LEECH_LIMIT = ""
+CLONE_LIMIT = ""
+RCLONE_LIMIT = ""
+
+#Group Features
+FSUB_IDS = "-1002229216669"
+USER_MAX_TASKS = "2"
+REQUEST_LIMITS = "5"
+ENABLE_MESSAGE_FILTER = "False"
+STOP_DUPLICATE_TASKS = "True"
+DISABLE_DRIVE_LINK = "True"
+TOKEN_TIMEOUT = ""
+
+#Extras
+SET_COMMANDS = "False"
+DISABLE_LEECH = "False"
+DISABLE_BULK = "False"
+DISABLE_MULTI = "False"
+DISABLE_SEED = "False"
+DM_MODE = "all"
+DELETE_LINKS = "True"
+LOG_CHAT_ID = "-1002229216669"
+
+# Torrent Search
+SEARCH_API_LINK = ""
+SEARCH_LIMIT = "0"
+SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/limetorrents.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torlock.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torrentscsv.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/eztv.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torrentproject.py",
+                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/kickass_torrent.py",
+                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/yts_am.py",
+                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py",
+                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/ettv.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/glotorrents.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/thepiratebay.py",
+                   "https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/leetx.py",
+                   "https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py",
+                   "https://raw.githubusercontent.com/msagca/qbittorrent_plugins/main/uniondht.py",
+                   "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
